try to fix image rescaling on mobile again

--- a/assets/main.css
+++ b/assets/main.css
@@ -49,6 +49,7 @@ img {
 
 .content {
   min-width: 450px;
+  height: auto;
 }
 /**
  * Figures
